--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: c
 dist: trusty
 sudo: required
-env:
-  - EMULATOR=simh BASICS=yes
-  - EMULATOR=klh10 BASICS=yes
-  - EMULATOR=sims BASICS=yes
-install: sh -ex build/dependencies.sh install_${TRAVIS_OS_NAME:-linux}
-script: make
+#env:
+#  - EMULATOR=simh BASICS=yes
+#  - EMULATOR=klh10 BASICS=yes
+#  - EMULATOR=sims BASICS=yes
+#install: sh -ex build/dependencies.sh install_${TRAVIS_OS_NAME:-linux}
+script: true
 notifications:
   email: lars@nocrew.org
